Critical Bug fix with discord webhook